Fixed close button visibility issue

--- a/scss/animation.scss
+++ b/scss/animation.scss
@@ -1,11 +1,11 @@
 @keyframes cloud-drift {
-    0% {transform: translate3d(100%, 0, 0)}
+    0% {left: 0}
 
-    100% {transform: translate3d(-100%, 0, 0)}
+    100% {left: -200%}
 }
 
 @keyframes cloud-drift-once {
-    0% {transform: translate3d(0, 0, 0)}
+    0% {left: 0}
 
-    100% {transform: translate3d(-100%, 0, 0)}
+    100% {left: -200%}
 }
