--- a/scss/home.scss
+++ b/scss/home.scss
@@ -37,22 +37,22 @@
 }
 
 .cloud {
-	background-image: url("res/clouds.png");
-	width: 100%;
-	height: 450px;
+	width: 250%;
+	height: 100%;
 	background-size: cover;
 	position: absolute;
-	margin-top: 5%;
-	opacity: 0.03;
+	opacity: 0.1;
 }
 
 #clouds-layer-1 {
 	@extend .cloud;
+	background-image: url("res/clouds2.png");
 	animation: cloud-drift 100s linear infinite;
 }
 
 #clouds-layer-2 {
 	@extend .cloud;
+	background-image: url("res/clouds.png");
 	transform: translate3d(100%, 0, 0);
 	animation-delay: 30s;
 	animation-duration: 120s;
@@ -60,13 +60,14 @@
 
 #clouds-layer-3 {
 	@extend .cloud;
+	background-image: url("res/clouds2.png");
 	transform: translate3d(100%, 0, 0);
-	margin-top: 15%;
 	animation-duration: 140s;
 }
 
 #clouds-layer-base {
 	@extend #clouds-layer-1;
+	background-image: url("res/clouds.png");
 	animation: cloud-drift-once 135s linear infinite;
 	animation-fill-mode: forwards;
 }
